--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,39 @@
-* {
+body {
     margin: 0;
-    padding: 0;
-    border: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main, nav {
+    max-width: 800 px;
+    margin: 0 auto;
+    padding: 0 12px;
 }
 
 body {
-    background-image: url(/m5-hw5-athalye-kavita/background.png);
+    background-image: url(/m6-hw6-athalye-kavita/background.png);
 }
 
-header {
+header, footer {
     background: #333;
-    padding: 40px 0;
-    border-bottom: 3px solid rgb(234, 100, 122);
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-h1 {
-    float: left;
-    color: white;
-}
-
-p {
-    margin: 15px 0;
-    line-height: 140%;
+    padding: 24px 0;
 }
 
 nav {
-    float: right;
+    display: flex;
 }
+
+.link {
+    margin: 0 4px;
+}
+
 
 nav a {
     color: white;
     font-size: 24px;
-    margin-right: 20px;
-    text-decoration: none;
 }
 
-main {
-    float: left;
-    width: 70%;
-    padding: 20px;
-}
-
-aside {
-    float: right;
-    width: 20%;
-    padding: 20px;
-}
-
-footer {
-    clear: both;
-}
-
-.main-content {
-    margin: 40px auto;
-}
 
 .headshot {
     float: left;
@@ -70,14 +45,8 @@ aside img {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    background: #333;
-    width: 100%;
-    text-align: center;
-}
-
-footer p {
     color: white;
-    font-size: 24px;
+    background: #333;
+    text-align: center;
+    margin-top: auto;
 }
