--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,14 @@ nav {
     margin: 0 20px 10px 0;
 }
 
+aside {
+    display: flex;
+}
+
+aside section{
+    flex-direction: column;
+}
+
 aside img {
     box-shadow: 3px 3px 6px black;
 }
