--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,12 @@ nav {
     display: flex;
 }
 
-
-.link {
-    margin-right: 0 4px;
+nav a {
+    color: white;
+    font-size: 24px;
+    margin-right: 20px;
+    text-decoration: none;
 }
-
 
 .headshot {
     float: left;
@@ -37,10 +38,6 @@ nav {
 
 aside {
     display: flex;
-}
-
-aside section{
-    flex-direction: column;
 }
 
 aside img {
