--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 body {
     margin: 0;
     min-height: 100vh;
@@ -19,6 +25,11 @@ header, footer {
     background: #333;
     padding: 24px 0;
     color: white;
+}
+
+p {
+    margin: 15px 0;
+    line-height: 140%;
 }
 
 nav {
