--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,18 @@ h1 {
 body {
     margin: 0;
     min-height: 100vh;
-    display: flex 2;
-    flex-direction: column;
 }
+ .container main-content {
+    display: flex;
+    flex-direction: column;
+ } 
+
 
 main, nav {
     max-width: 800 px;
     margin: 0 auto;
     padding: 0 12px;
 }
-
 
 body {
     background-image: url(/m6-hw6-athalye-kavita/background.png);
@@ -44,7 +46,7 @@ nav {
 nav a {
     color: white;
     font-size: 24px;
-    margin-right: auto;
+    margin: 0 4px;
 }
 
 .headshot {
