--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,11 @@ h1 {
     color: white;
 }
 
-body {
-    margin: 0;
-    min-height: 100vh;
-}
- .container main-content {
+.container {
     display: flex;
     flex-direction: column;
- } 
-
-
-main, nav {
-    max-width: 800 px;
-    margin: 0 auto;
-    padding: 0 12px;
 }
+
 
 body {
     background-image: url(/m6-hw6-athalye-kavita/background.png);
@@ -43,6 +33,9 @@ nav {
     display: flex;
 }
 
+.Name {
+    margin-right: auto;
+}
 nav a {
     color: white;
     font-size: 24px;
