--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,27 @@ h1 {
     color: white;
 }
 
+body {
+    margin: 0;
+    min-height: 100vh;
+}
+
+main, nav {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 12px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
+    align-content: center;
 }
 
+.side {
+    display: flex;
+    flex-direction: column;
+}
 
 body {
     background-image: url(/m6-hw6-athalye-kavita/background.png);
