--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ h1 {
 body {
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 main, nav {
@@ -19,16 +22,6 @@ main, nav {
     padding: 0 12px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-}
-
-.side {
-    display: flex;
-    flex-direction: column;
-}
 
 body {
     background-image: url(/m6-hw6-athalye-kavita/background.png);
