--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@ h1 {
 body {
     margin: 0;
     min-height: 100vh;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
 }
 
-main, nav, aside {
+main, nav {
     max-width: 800px;
     margin: 0 auto;
     padding: 0 12px;
