--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1 {
 }
 
 body {
+    min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -52,6 +53,11 @@ nav a {
 .headshot {
     float: left;
     margin: 0 20px 10px 0;
+}
+
+aside {
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 aside img {
