--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,13 @@ body {
     min-height: 100vh;
     margin: 0;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 main, nav {
     max-width: 800px;
     margin: 0 auto;
-    padding: 0 12px;
+    padding: 20px;
 }
 
 
@@ -57,8 +57,6 @@ nav a {
 
 aside {
     display: flex;
-    flex-direction: row-reverse;
-    align-content: flex-start;
 }
 
 aside img {
