Modified index.html and styles.css

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     min-height: 100vh;
     margin: 0;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 main, nav {
@@ -57,6 +57,7 @@ nav a {
 
 aside {
     display: flex;
+    justify-self: right;
 }
 
 aside img {
